--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Npowest\\Modbus\\": "src/"
         }
     },
     "config": {
